--- a/web/.env
+++ b/web/.env
@@ -1,1 +1,3 @@
-DATABASE_PATH = "/home/daniel/Plocha/python-protokol/python-protocol/web/database/coolDB.db"
+DATABASE_PATH = "database/coolDB.db"
+CERT_PATH = "certifikat.pem"
+KEY_PATH = "klic.pem"
